--- a/index.html
+++ b/index.html
@@ -1,12 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lombok Traveler</title>
+    <link rel="stylesheet" href="./CSS/index.css">
 </head>
+
 <body>
-    
+    <!--Header-->
+    <header>
+        <navbar class="container">
+            <div class="navbar">
+                <img class="logo" src="./Assets/logo lombok travel.png" alt="">
+                <div class="menu">
+                    <a class="menu-item" href="#hero"> Home </a>
+                    <a class="menu-item" href="#Pacpage"> Our Packpage </a>
+                    <a class="menu-item" href="#about-contact"> Call Us </a>
+                </div>
+            </div>
+        </navbar>
+    </header>
+    <!--Konten-->
+    <main>
+        <section id="hero">
+            <div class="container">
+                <div class="hero-title">
+                    <h1>Your Trasted Travel Agent's </h1>
+                    <h6>Your Happiness is our hapines</h6>
+                </div>
+            </div>
+        </section>
+        <section id="about-contact">
+            <div class="container">
+                <div class="about-contact">
+                    <div class="about">
+                        <img class="about-image" src="./Assets/Bukit merese.jpg" alt="">
+                        <div class="about-caption">
+                            <p>"Liburan menjadi menyenangkan bersama Lombok Travel"</p>
+                        </div>
+                        <div class="conten-person">
+                            <img src="./Assets/CEO.jpg" alt="">
+                            <div class="person-info">
+                                <h6>Ahmad Satriadi</h6>
+                                <p>CEO</p>
+                            </div>
+                        </div>
+                        <hr class="border">
+                        <div class="about-information">
+                            <h6>Disini nanti saat ada internet saya akan isi dengan informasi tentang website ini secara
+                                eksplisit anjayyy Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rem
+                                aliquid laudantium commodi quia cupiditate autem corrupti fugit at tempora, suscipit
+                                cumque doloribus sapiente error nostrum excepturi. Qui, placeat omnis?</h6>
+                            <ul class="information-list">
+                                <li>
+                                    <div class="list-number"> 1 </div>
+                                    <p class="list-content">Perjalanan yang terjangkau ekonomi</p>
+                                </li>
+                                <li>
+                                    <div class="list-number"> 2 </div>
+                                    <p class="list-content">Perjalanan yang menyenangkan</p>
+                                </li>
+                                <li>
+                                    <div class="list-number"> 3 </div>
+                                    <p class="list-content">Message full service awokwok</p>
+                                </li>
+                            </ul>
+                        </div>
+                        <hr>
+                    </div>
+                    <div class="contact">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>Contact Us</h4>
+                                <p>Kami akan menghubungi anda dalam 1x24 jam setelah data kami terima</p>
+                            </div>
+                            <form action="">
+                                <div class="input"> 
+                                    <label for="name">Your Name : </label>
+                                    <input type="text" name="name">
+                                </div>
+                                <div class="input">
+                                    <label for="email">Email Address : </label>
+                                    <input type="text" name="email">
+                                </div>
+                                <div class="input">
+                                    <label for="name">What are you interested in?</label>
+                                    <select name="" id="">
+                                        <option value="">Pelayanan</option>
+                                        <option value="">Biaya Terjangkau</option>
+                                        <option value="">Tujuan Perjalanan</option>     
+                                    </select>
+                                </div>
+                                <div class="input">
+                                    <input type="submit" value="Send">
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <!--Footer-->
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
