--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="hero">
             <div class="container">
                 <div class="hero-title">
-                    <h1>Your Trasted Travel Agent's </h1>
+                    <h1>Lombok Travel </h1>
                     <h6>Your Happiness is our hapines</h6>
                 </div>
             </div>
@@ -50,10 +50,16 @@
                         </div>
                         <hr class="border">
                         <div class="about-information">
-                            <h6>Disini nanti saat ada internet saya akan isi dengan informasi tentang website ini secara
-                                eksplisit anjayyy Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat rem
-                                aliquid laudantium commodi quia cupiditate autem corrupti fugit at tempora, suscipit
-                                cumque doloribus sapiente error nostrum excepturi. Qui, placeat omnis?</h6>
+                            <h6>Bersiaplah untuk menjelajahi keindahan Pulau Lombok yang memukau dengan website travel
+                                kami! Dengan paket tur yang dirancang khusus untuk memenuhi kebutuhan dan anggaran Anda,
+                                Anda dapat menikmati pantai-pantai putih berkilauan, air laut biru yang jernih, dan
+                                pemandangan gunung yang menakjubkan. Kami menjamin bahwa perjalanan Anda akan diatur
+                                dengan teliti oleh tim kami yang berpengalaman, sehingga Anda dapat fokus pada
+                                pengalaman wisata yang tidak hanya menyenangkan, tetapi juga memberikan pengalaman
+                                berharga yang tak terlupakan. Jangan lewatkan kesempatan ini untuk merasakan kehangatan
+                                dan keramahan penduduk lokal, serta menikmati kuliner lokal yang lezat dan aktivitas
+                                yang memacu adrenalin seperti surfing, snorkeling, dan hiking. Hubungi kami untuk
+                                informasi lebih lanjut dan mulailah petualangan Anda di Pulau Lombok sekarang!</h6>
                             <ul class="information-list">
                                 <li>
                                     <div class="list-number"> 1 </div>
@@ -78,7 +84,7 @@
                                 <p>Kami akan menghubungi anda dalam 1x24 jam setelah data kami terima</p>
                             </div>
                             <form action="">
-                                <div class="input"> 
+                                <div class="input">
                                     <label for="name">Your Name : </label>
                                     <input type="text" name="name">
                                 </div>
@@ -91,11 +97,11 @@
                                     <select name="" id="">
                                         <option value="">Pelayanan</option>
                                         <option value="">Biaya Terjangkau</option>
-                                        <option value="">Tujuan Perjalanan</option>     
+                                        <option value="">Tujuan Perjalanan</option>
                                     </select>
                                 </div>
-                                <div class="input">
-                                    <input type="submit" value="Send">
+                                <div class="submit">
+                                    <input class="submit-input" type="submit" value="Send">
                                 </div>
                             </form>
                         </div>
